# gyaradax

./: .gitignore  CLAUDE.md  GEMINI.md  GKW.md  IMEX.md  LICENSE  OPTIM.md  OPTIM_measurements.md  PROMPT.md  PROMPT_kinetic.md  PROMPT_verification.md  Post_Mortem_JAX_Optimizations.md  README.md  VERIFICATION.md  debug_nans.py  enviorment.yml  environment.yml  geometry.py  gksolver.py  jax_geometry.py  jax_integrals.py  jax_solver.py  ncu_sol.txt  paper.tex  plan.md  plot_utils.py  pyproject.toml  requirements.txt  tasks.md  tasks_vpar.md  temp_script_ref_avg.py  test_cost_analysis.py  test_gksolve.py  test_gksolver_linear.py  test_gksolver_nonlinear.py  test_jax_integrals.py  tmp.ipynb  tmp.yaml  update_nb.py  utils.py  (+1 more)
.opencode/plans/: baseline_recovery.md  jax_linear_rhs_fix.md
configs/: adiabatic_a.yaml  adiabatic_b.yaml  iteration_0.yaml  iteration_0_Lin.yaml  iteration_101.yaml  iteration_115.yaml  iteration_13.yaml  iteration_135.yaml  iteration_13_Lin.yaml  iteration_148.yaml  iteration_200.yaml  iteration_200_Lin.yaml  iteration_262.yaml  iteration_8.yaml  iteration_8_Lin.yaml  kinetic.yaml  kinetic_991_double_rlt.yaml  kinetic_991_half_rlt.yaml  kinetic_991_ntsks128.yaml  linear.yaml  nl_em_apar.yaml  nl_em_waltz_b005.yaml  nl_em_waltz_b01.yaml  test.yaml
configs/sweep/: iteration_10.yaml  iteration_104.yaml  iteration_107.yaml  iteration_108.yaml  iteration_112.yaml  iteration_116.yaml  iteration_120.yaml  iteration_126.yaml  iteration_129.yaml  iteration_13.yaml  iteration_138.yaml  iteration_143.yaml  iteration_154.yaml  iteration_156.yaml  iteration_164.yaml  iteration_171.yaml  iteration_183.yaml  iteration_198.yaml  iteration_200.yaml  iteration_205.yaml  iteration_207.yaml  iteration_210.yaml  iteration_212.yaml  iteration_213.yaml  iteration_218.yaml  iteration_221.yaml  iteration_222.yaml  (+26 more)
cuda_augmentations/: CMakeLists.txt  FFT_VARIATIONS.md  analyze_hlo_diff.py  apply_parallel.cu  apply_parallel_dual.cu  bracket_d2z_load_cb.cu  bracket_d2z_load_cb_merged.cu  bracket_d2z_z2z_load_cb.cu  bracket_store_cb.cu  bracket_v5_store_cb.cu  bracket_v5_z2z_load_cb.cu  bracket_z2z_load_cb.cu  bracket_z2z_merged_load_cb.cu  cufft_bracket.cu  cufft_graph_bracket.cu  cufft_graph_bracket_fp32.cu  cufft_graph_bracket_fp64.cu  cufft_lto_bracket.cu  dump_hlo_z2z.py  jax_ffi_benchmark.py  ncu_kernels.txt  ncu_roofline.txt  ncu_sol.txt  ncu_stalls.txt  skill.md  test_z2z_cb.cu  v3_optimization_plan.md
cuda_augmentations/cuFFT_LTO_example/: skill.md
cuda_augmentations/cuFFT_LTO_example/MRE_callback_complex_drop/: callback_fatbin.h  test_bug
cuda_augmentations/hlo_dumps/: dump_linear_rk4_hlo.py
debug/: hlo_dump_z2z.py
docs/: NOTES.md  PHYSICS.md  PROMPT.md
docs/cuda_experiments/: CMakeLists.txt  README.md  apply_parallel_dual.cu  apply_parallel_opt.md  apply_vpar_dual_stencil.cu  apply_vpar_stencil.cu  bracket_d2z_load_cb.cu  bracket_d2z_load_v2_cb.cu  bracket_load_cb.cu  bracket_store_cb.cu  bracket_v5_d2z_load_cb.cu  bracket_v5_lto_fatbins.cu  bracket_v5_lto_fatbins_decl.h  bracket_v5_store_cb.cu  bracket_v5_z2z_load_cb.cu  compare_against_jax.py  cufft_graph_bracket.cu  cufft_graph_bracket_fp64.cu  cufft_graph_bracket_fp64_direct.cu  cufft_graph_bracket_true_fp32.cu  jax_ffi_benchmark.py  linear_rhs_fused.cu  linear_rhs_vtiled.cu  test_z2z_cb  test_z2z_cb_device.cu  test_z2z_cb_fatbin.h  test_z2z_cb_host.cpp
docs/cuda_experiments/cuFFT_LTO_example/: api_reference.md
docs/cuda_experiments/cuFFT_LTO_example/MRE_callback_complex_drop/: callback.cu  main.cu
docs/cuda_experiments/hlo_dumps/: dump_linear_rk4_hlo.py  dump_z2z_hlo.py
docs/cuda_experiments/kernels/: README.md  example_kernel.cu
gkw_ref/: em_validation_matrix.json
gyaradax/: __init__.py  analytic_geometry.py  bootstrap.py  cfl.py  collisions.py  constants.py  diag.py  eigenvalue.py  fields.py  geometry.py  gkw_input.py  integrals.py  jax_config.py  params.py  plot_utils.py  precompute.py  runtime_config.py  sharding.py  simulate.py  solver.py  state.py  stencils.py  types.py  utils.py
gyaradax/backends/cuda_kernels/: CMakeLists.txt  MIGRATION_SUMMARY.md  README.md
gyaradax/backends/cuda_kernels/kernels/: apply_parallel.cu  compute_scale_factors.cu  cufft_bracket.cu  cufft_graph_bracket.cu  linear_rhs_fused.cu  linear_rhs_vtiled.cu
gyaradax/backends/cuda_kernels/lto_callbacks/: bracket_v5_d2z_load_cb.cu  bracket_v5_store_cb.cu  bracket_v5_z2z_load_cb.cu
gyrokinetics_jax/: __init__.py  geometry.py  integrals_jax.py  solver.py  utils.py
hlo_dumps/: dump_z2z_hlo.py  z2z_fp32.hlo.txt  z2z_fp64.hlo.txt
notebooks/: analytical_benchmarks.ipynb  em_analytical.ipynb  em_rollout_flux_comparison.ipynb  examine_validation.ipynb  gkw_cases.ipynb  gradient_validation.ipynb  gradients.ipynb  inverse_problem.ipynb  kinetic_analytical.ipynb  kinetic_validation.ipynb  learned_correction.ipynb  linear_v1_inspection.ipynb  optimization_showcase.ipynb  qlgyx.ipynb  sensitivity_analysis.ipynb  simulate.ipynb  sitl.ipynb  torax_gyaradax.ipynb  validation.ipynb  validation_stats.py  verification.ipynb  warm_restart_eval.ipynb
scripts/: _runtime_config_loader.py  advanced_run.py  animate_sim.py  bench_apply_parallel.py  bench_apply_vpar.py  benchmark_sharding.py  compare_em_gkw_checkpoint.py  compare_em_rollouts.py  generate_em_gkw_validation_data.py  generate_em_gyaradax_rollouts.py  generate_em_validation_matrix.py  gkw_to_yaml.py  paper_benchmark.py  rerun_fail.sh  run.py  run_em_benchmark_gkw_generation.sh  run_em_benchmark_gyaradax_comparison.sh  run_kinetic_sweep.sh  run_validation_sweep.sh  solver_benchmark.py  test_io.py  test_simulate.py  validate_kinetic.py  validate_miller.py  validate_physics.py  validate_time_averaged.py  verify_yaml_params.py
solver_components_benchmarks/: README.md  bench_apply_parallel.py  bench_apply_parallel_cuda.py  bench_apply_vpar.py  bench_apply_vpar_cuda.py  bench_linear_rhs.py  bench_nonlinear.py  bench_pack_spectrum.py  bench_phi_solve.py  bench_rk4_scan.py  bench_rk4_step.py  bench_warp_overhead.py  common.py  generate_baselines.py  run_all.py
tests/: conftest.py
(+272 files in other folders)
