[project]
name = "gyaradax"
authors = [{ name = "Gianluca Galletti" }, { name = "Eric Volkmann" }]
version = "0.0.1"
description = "Gyrokinetic Vlasov-Poisson solver in JAX"
requires-python = ">=3.12"
dependencies = [
  "jax",
  "numpy",
  "omegaconf",
  "einops",
  "matplotlib",
  "pillow",
  "scipy",
]

[project.optional-dependencies]
cuda13 = ["jax[cuda13-local]"]
dev = ["pytest", "ruff", "black"]

[tool.setuptools.packages.find]
include = ["gyaradax*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E402"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow-running"]
